--- a/clusters/localhost/gitops/kustomization.yaml
+++ b/clusters/localhost/gitops/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  app.kubernetes.io/part-of: wac-hospital
+labels:
+- pairs:
+    app.kubernetes.io/part-of: wac-hospital
 
 namespace: wac-hospital
 
@@ -11,3 +12,6 @@ resources:
 - cd.kustomization.yaml
 - install.kustomization.yaml
 - git-repository.yaml
+- ambulance-ufe.image-repository.yaml
+- ambulance-ufe.image-policy.yaml
+- image-update-automation.yaml
